[metadata]
name = ffcompress
version = 0.1.0a
description = ffmpeg-based video compression tool.
url = https://github.com/fergusch/ffcompress
author = Christian Ferguson
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3

[options]
packages = ffcompress
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    ffcompress = ffcompress.cli:main
